<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/search"
        android:title=""
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView"
        tools:ignore="UnusedAttribute" />

    <item android:id="@+id/more"
        android:title=""
        android:icon="@drawable/ic_baseline_read_more_24"
        app:showAsAction="collapseActionView|ifRoom"
        tools:ignore="UnusedAttribute" />
</menu>